--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <title>VEZBANJE</title>
   <body>
-    <h1>OVO JE VEZVBA</h1>
+    <h1>OVO JE VEZBA</h1>
+    <h2>OVO JE NASTAVAK VEZBE</h2>
   </body>
 </html>
   
